# cja_auto_sdr

./: .env.example  .gitignore  BATCH_PROCESSING_GUIDE.md  CHANGELOG.md  CJA Data View Solution Design Reference Generator.ipynb  CJA Data View Solution Design Reference Generator_v3.py  CJA_DataView_Adobe Store - Prod CJA Lab L123 Adobe Summit 2025_dv_677ea9291244fd082f02dd42_SDR.xlsx  CLAUDE.md  OPTIMIZATION_SUMMARY.md  OUTPUT_FORMATS.md  README.md  cja_calculated_metrics_inventory.py  cja_derived_fields_inventory.py  cja_inventory_utils.py  cja_sdr_generator.py  cja_segments_inventory.py  create_sample_outputs.py  main.py  plan.md  pyproject.toml  pytest.ini  stress_test.py  test_excel_formatting.py  ~$CJA_DataView_Adobe Store - Prod CJA Lab L123 Adobe Summit 2025_dv_677ea9291244fd082f02dd42_SDR.xlsx
.github/workflows/: lint.yml  patch-release-gate.yml  test-counts.yml  tests.yml  version-sync.yml
docs/: BATCH_PROCESSING_GUIDE.md  CALCULATED_METRICS_INVENTORY.md  CLI_REFERENCE.md  CONFIGURATION.md  DATA_QUALITY.md  DATA_VIEW_NAMES.md  DERIVED_FIELDS_INVENTORY.md  DIFF_COMPARISON.md  FAILURE_CODES.md  GIT_INTEGRATION.md  INSTALLATION.md  INVENTORY_OVERVIEW.md  OPTIMIZATION_SUMMARY.md  ORG_WIDE_ANALYSIS.md  OUTPUT_FORMATS.md  PERFORMANCE.md  QUICKSTART_GUIDE.md  QUICK_REFERENCE.md  SEGMENTS_INVENTORY.md  SHELL_COMPLETION.md  STRESS_TEST_RESULTS.md  TROUBLESHOOTING.md  USE_CASES.md
sample_outputs/csv/: metadata.csv
sample_outputs/diff/: sample_diff_report.json  sample_diff_report.md  sample_snapshot.json
sample_outputs/excel/: sample_sdr.xlsx
sample_outputs/git-snapshots/: README.md
sample_outputs/git-snapshots/ProductionAnalytics_dv_12345/: metadata.json
sample_outputs/html/: sample_sdr.html
sample_outputs/json/: sample_sdr.json
sample_outputs/markdown/: sample_sdr.md
scripts/: __init__.py  check_version_sync.py  create_sample_outputs.py  stress_test.py  update_test_counts.py
src/cja_auto_sdr/: __init__.py  __main__.py  generator.py
src/cja_auto_sdr/api/: __init__.py  cache.py  client.py  fetch.py  quality.py  quality_policy.py  resilience.py  tuning.py  validation.py
src/cja_auto_sdr/cli/: __init__.py  execution.py  interactive.py  main.py  option_resolution.py  parser.py
src/cja_auto_sdr/cli/commands/: __init__.py  config.py  list.py  stats.py
src/cja_auto_sdr/core/: __init__.py  colors.py  config.py  config_validation.py  constants.py  credentials.py  discovery_exceptions.py  discovery_normalization.py  discovery_payloads.py  error_policies.py  exceptions.py  exit_codes.py  lazy.py  logging.py  perf.py  profiles.py  version.py
src/cja_auto_sdr/core/locks/: __init__.py  backends.py  manager.py
src/cja_auto_sdr/data/: __init__.py
src/cja_auto_sdr/diff/: __init__.py  cli.py  commands.py  comparator.py  git.py  models.py  snapshot.py  writers.py
src/cja_auto_sdr/git/: __init__.py
src/cja_auto_sdr/inventory/: __init__.py  calculated_metrics.py  derived_fields.py  segments.py  summary.py  utils.py
src/cja_auto_sdr/org/: __init__.py  analyzer.py  cache.py  identifiers.py  models.py  snapshot_utils.py  trending.py
src/cja_auto_sdr/org/writers/: __init__.py
src/cja_auto_sdr/output/: __init__.py  excel.py  protocols.py  registry.py
src/cja_auto_sdr/output/sdr/: __init__.py
src/cja_auto_sdr/output/writers/: __init__.py  csv.py  excel.py  html.py  json.py  markdown.py
src/cja_auto_sdr/pipeline/: __init__.py  batch.py  dry_run.py  models.py  single.py  workers.py
tests/: README.md  __init__.py  conftest.py  test_api_client.py  test_api_coverage.py  test_api_tuning.py  test_backwards_compat.py  test_batch_processor.py  test_calculated_metrics_inventory.py  test_check_version_sync.py  test_circuit_breaker.py  test_cja_initialization.py  test_cli.py  test_cli_color_policy_e2e.py  test_cli_command_handlers.py  test_cli_commands_config_coverage.py  test_cli_diff_contracts.py  test_cli_execution.py  test_cli_smoke_modes.py  test_colors.py  test_completion.py  test_config_and_resolution.py  test_config_dataclasses.py  test_config_validation.py  test_coverage_hardening.py  test_credentials.py  test_data_quality.py  test_derived_fields_coverage.py  test_derived_fields_edge_cases.py  test_derived_inventory.py  test_diff_command_coverage.py  test_diff_comparison.py  test_diff_coverage.py  test_diff_git_coverage.py  test_diff_inventory_output.py  test_discovery_component_consistency.py  test_discovery_exceptions.py  test_discovery_formatters.py  test_discovery_normalization.py  test_discovery_payloads.py  (+68 more)
tests/fixtures/: test_excel_output.xlsx
