[project]
name = "cja-auto-sdr"
dynamic = ["version"]
description = "Customer Journey Analytics SDR Generator with Data Quality Validation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cjapy>=0.2.4.post3",
    "numpy>=2.2.0,!=2.4.0",
    "pandas>=2.3.3",
    "xlsxwriter>=3.2.9",
    "tqdm>=4.66.0",
]

[project.scripts]
cja_auto_sdr = "cja_auto_sdr.generator:main"
cja-auto-sdr = "cja_auto_sdr.generator:main"

[project.optional-dependencies]
clustering = [
    "scipy>=1.14.0",
]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
]
env = [
    "python-dotenv>=1.0.0",
]
completion = [
    "argcomplete>=3.0.0",
]
full = [
    "scipy>=1.14.0",
    "python-dotenv>=1.0.0",
    "argcomplete>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cja_auto_sdr/core/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cja_auto_sdr"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
    "B905",   # zip strict (Python 3.10+ only pattern)
]

[tool.ruff.lint.per-file-ignores]
"src/cja_auto_sdr/generator.py" = ["E", "W", "F", "B", "SIM", "RUF", "UP"]
"tests/**" = ["B", "SIM", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["cja_auto_sdr"]
