[project]
name = "cja-auto-sdr"
dynamic = ["version"]
description = "Customer Journey Analytics SDR Generator with Data Quality Validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "cjapy>=0.2.4.post3",
    "numpy>=2.2.0,!=2.4.0",
    "pandas>=2.3.3",
    "xlsxwriter>=3.2.9",
    "tqdm>=4.66.0",
]

[project.urls]
Homepage = "https://github.com/brian-a-au/cja_auto_sdr"
Repository = "https://github.com/brian-a-au/cja_auto_sdr"
Issues = "https://github.com/brian-a-au/cja_auto_sdr/issues"
Changelog = "https://github.com/brian-a-au/cja_auto_sdr/blob/main/CHANGELOG.md"

[project.scripts]
cja_auto_sdr = "cja_auto_sdr.generator:main"
cja-auto-sdr = "cja_auto_sdr.generator:main"

[project.optional-dependencies]
clustering = [
    "scipy>=1.14.0",
]
env = [
    "python-dotenv>=1.0.0",
]
completion = [
    "argcomplete>=3.0.0",
]
full = [
    "scipy>=1.14.0",
    "python-dotenv>=1.0.0",
    "argcomplete>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/cja_auto_sdr/core/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/cja_auto_sdr"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "PERF", # perflint
    "DTZ",  # flake8-datetimez
    "RET",  # flake8-return
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.per-file-ignores]
"src/cja_auto_sdr/generator.py" = ["F401", "E402", "RUF001", "RUF003", "SIM115"]  # F401: re-exports; E402: optional imports; RUF001/3: intentional Unicode symbols; SIM115: NamedTemporaryFile with delete=False
"src/cja_auto_sdr/api/*.py" = ["F822"]       # lazy forwarding modules (resolved via __getattr__)
"src/cja_auto_sdr/cli/*.py" = ["F822"]       # lazy forwarding modules
"src/cja_auto_sdr/core/profiles.py" = ["F822"]  # lazy forwarding module
"src/cja_auto_sdr/diff/*.py" = ["F822"]      # lazy forwarding modules
"src/cja_auto_sdr/inventory/*.py" = ["F822"] # lazy forwarding modules
"src/cja_auto_sdr/output/**/*.py" = ["F822"] # lazy forwarding modules
"src/cja_auto_sdr/pipeline/*.py" = ["F822"]  # lazy forwarding modules
"tests/**" = ["B", "SIM", "RUF012", "PERF", "DTZ"]

[tool.ruff.lint.isort]
known-first-party = ["cja_auto_sdr"]
